--- a/7IM_TechTest_Angular/src/app/app.component.html
+++ b/7IM_TechTest_Angular/src/app/app.component.html
@@ -2,23 +2,6 @@
 
 <app-search-box (doSearch)="doSearch($event)"/>
 
-<table *ngIf="searchResults && searchResults.length > 0">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Gender</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let result of searchResults">
-        <td>{{ result.id }}</td>
-        <td>{{ result.firstName }}</td>
-        <td>{{ result.lastName }}</td>
-        <td>{{ result.email }}</td>
-        <td>{{ result.gender }}</td>
-      </tr>
-    </tbody>
-</table>
+<div *ngIf="searchResults && searchResults.length > 0">
+  <app-person-card *ngFor="let result of searchResults" [person]="result"/>
+</div>
